--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://donnacancode.github.io/react-portfolio",
+  "homepage": "<http://donnacancode.github.io/react-portfolio>",
   "name": "reactportfolio",
   "private": true,
   "version": "0.0.0",
